kube/ingress/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dm874-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: gr2-site.cloud.sdu.dk
    http:
      paths:
      - path: /login
        backend:
          serviceName: auth-service
          servicePort: 8084
      - path: /register
        backend:
          serviceName: auth-service
          servicePort: 8084
