kube/ingress/nonamespace.k8s.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dm874-ingress
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "webserver-ws"
    nginx.org/websocket-services: "webserver-ws"
spec:
  rules:
  - host: gr2-site.cloud.sdu.dk
    http:
      paths:
      - path: /login
        backend:
          serviceName: auth-service
          servicePort: 8084
      - path: /register
        backend:
          serviceName: auth-service
          servicePort: 8084
      - path: /users
        backend:
          serviceName: auth-service
          servicePort: 8084
      - path: /home
        backend:
          serviceName: webserver-service
          servicePort: 9000
      - path: /ws
        backend:
          serviceName: webserver-ws
          servicePort: 9000
